--- a/osa4/package.json
+++ b/osa4/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "mongoose": "^5.0.7"
   },
   "devDependencies": {
+    "jest": "^22.4.2",
     "nodemon": "^1.15.1"
   }
 }
