--- a/osa4/package.json
+++ b/osa4/package.json
@@ -4,19 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "watch": "nodemon index.js",
-    "test": "jest --verbose"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "watch": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "mongoose": "^5.0.7"
   },
   "devDependencies": {
+    "cross-env": "^5.1.3",
+    "eslint": "^4.18.1",
     "jest": "^22.4.2",
-    "nodemon": "^1.15.1"
+    "nodemon": "^1.15.1",
+    "supertest": "^3.0.0"
   }
 }
